--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <!-- #1 #structure #document -->
-<html>
+<html lang="en">
 <head>
 
     <!-- #1 #structure #title -->
@@ -49,7 +49,7 @@
 
 
         /*styles for channel area*/
-        h2 {
+        ul {
             /* #2 #colorful #channelandchat */
             background-color: white;
         }
@@ -76,6 +76,10 @@
             font-style: normal;
         }
 
+        ul {
+            list-style-type: none;
+        }
+
     </style>
 
 </head>
@@ -84,19 +88,23 @@
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" alt="Moocus' Pic">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<ul style="list-style-type: none">
+    <li>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="Star Pic"></li>
+    <li>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="Star Pic-o"></li>
+    <li>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="Star Pic"></li>
+    <li>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="Star-o Pic"></li>
+    <li>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="Star Pic"></li>
+</ul>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
+<div style="background-color: white">
+    <button>new<img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="Lightbulb-o Pic"></button>
+    <button>trending<img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="Fire Pic"></button>
+    <button>favorites<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="Star Pic"></button>
+</div>
 
 
 <!-- chat area -->
@@ -108,84 +116,94 @@
         <strong>cheeses.yard.applies</strong>
     </small>
 </h1>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/cheeses.yard.applies" style="color: black" target="_blank">cheeses.yard.applies</a></strong>
+        Wed, June 20th, 13:37
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>15 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>What's the place you folks call home?</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/truck.cotton.zone" style="color: black" target="_blank">truck.cotton.zone</a></strong>
+        Wed, June 20th, 13:39
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>4 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>BRISBANE! Hang loose!</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
-    Wed, June 20th, 13:37
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/thus.best.dishes" style="color: black" target="_blank">thus.best.dishes</a></strong>
+        Wed, June 20th, 14:02
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>12 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>The big apple.</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
-    Wed, June 20th, 13:39
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>4 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/driveway.helper.magazine" style="color: black" target="_blank">driveway.helper.magazine</a></strong>
+        Wed, June 20th, 14:02
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>7 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>Eu sou um Carocas.</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>12 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/escapes.pitch.saucepan" style="color: black" target="_blank">escapes.pitch.saucepan</a></strong>
+        Wed, June 20th, 14:07
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>14 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>Greetings from the western cape!</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>7 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
-    Wed, June 20th, 14:07
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>14 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time  -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
-    Wed, June 20th, 04:08
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div style="width: 80%">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/meanings.identity.pays" style="color: black" target="_blank">meanings.identity.pays</a></strong>
+        Wed, June 20th, 04:08
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>15 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>北京</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
 </body>
 </html>
